--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!-- You may freely edit this file. See harness/README in the NetBeans platform -->
 <!-- for some information on what you could do (e.g. targets to override). -->
 <!-- If you delete this file and reopen the project it will be recreated. -->
-<project name="Joeffice2" basedir=".">
-    <description>Builds the module suite Joeffice2.</description>
+<project name="Joeffice" basedir=".">
+    <description>Builds the module suite Joeffice.</description>
     <import file="nbproject/build-impl.xml"/>
 </project>
