### General - Use correct size for fonts on Windows - Changed applet location to joeffice.com/online - Added how to generate binaries to build - Minor bug fixes
### Spreadsheet
- Fixed last row sometimes not taken into account
- Detect dates in CSV files
- Close workbook before opening a new one
- Always use default cell alignment when not specified

--- a/Desktop/src/org/joeffice/desktop/Bundle.properties
+++ b/Desktop/src/org/joeffice/desktop/Bundle.properties
@@ -8,7 +8,7 @@ Menu/Edit/GimmeMore=Gimme More
 AppearancePanel.languageLabel.text=Language
 
 OpenIDE-Module-Short-Description=The common module of office modules
-org_joeffice_desktop_update_center=http://www.joeffice.org/dev/updates.xml
+org_joeffice_desktop_update_center=http://www.joeffice.com/dev/updates.xml
 
 Services/AutoupdateType/org_joeffice_desktop_update_center.instance=Joeffice Dev Update Center
 
