Fixed extra empty lines in bullet list

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 .DS_Store
 
 /nbbuild/nbms/
+/Tools/business-financial-data-september-2022-quarter.csv
+/Tools/45 Tips to become a better developer.pptx
